--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -13,8 +13,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="21dp"
-        android:layout_marginRight="21dp"
-        android:layout_marginLeft="14dp"
         android:layout_marginStart="14dp"
         android:text="+91 7303005555"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
@@ -23,14 +21,15 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="@+id/textView6"
         app:layout_constraintStart_toEndOf="@+id/imageView7"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+        app:layout_constraintTop_toTopOf="@+id/imageView7"
+        android:layout_marginRight="21dp"
+        android:layout_marginLeft="14dp" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
-        android:layout_marginLeft="14dp"
         android:layout_marginTop="10dp"
         android:text="info@junospizza.com"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
@@ -44,7 +43,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7"
@@ -56,7 +54,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="87dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:drawable/ic_menu_call" />
@@ -67,7 +64,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="227dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:drawable/ic_menu_mylocation" />
@@ -89,9 +85,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
-        android:layout_marginLeft="14dp"
-        android:gravity="start"
         android:layout_marginTop="1dp"
+        android:gravity="start"
         android:lineSpacingExtra="10sp"
         android:text="Contact Us"
         android:textAlignment="viewStart"
@@ -109,24 +104,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="51dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
 
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:drawable/ic_menu_sort_by_size" />
-
-    <MultiAutoCompleteTextView
-        android:id="@+id/multiAutoCompleteTextView2"
-        android:layout_width="289dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginLeft="14dp"
-        android:layout_marginTop="19dp"
-        android:text="Juno's Hospitality LLP, Gala F8, Nandham Industrial Estate,  Marol, Andheri E, Mumbai 400059"
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
-        android:textColor="@android:color/background_light"
-        app:layout_constraintStart_toEndOf="@+id/imageView8"
-        app:layout_constraintTop_toTopOf="@+id/textView10" />
 
     <TextView
         android:id="@+id/textView10"
@@ -136,7 +117,23 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/multiAutoCompleteTextView2"
+        app:layout_constraintStart_toStartOf="@+id/textView11"
         app:layout_constraintTop_toTopOf="@+id/imageView8" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="38dp"
+        android:layout_marginEnd="62dp"
+        android:layout_marginStart="62dp"
+        android:layout_marginTop="32dp"
+        android:text="Juno's Hospitality LLP, Gala F8, Nandham Industrial Estate,  Marol, Andheri E, Mumbai 400059"
+        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView10" />
 
 </android.support.constraint.ConstraintLayout>
