--- a/app/src/main/res/layout/activity_rate_us.xml
+++ b/app/src/main/res/layout/activity_rate_us.xml
@@ -16,7 +16,9 @@
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        android:theme="@style/RatingBar"
+        />
 
     <TextView
         android:id="@+id/textView8"
