--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#0a0a0a</color>
     <color name="colorAccent">#FF4081</color>
     <color name="Reddish">#c62828</color>
-
+    <color name="duskYellow">	#DAA520	</color>
+    <color name="lightGrey">#C0C0C0</color>
 </resources>
